gts-macros/tests/compile_fail/invalid_gts_id_missing_prefix.rs
//! Test: GTS schema ID missing 'gts.' prefix

use gts_macros::struct_to_gts_schema;

#[struct_to_gts_schema(
    dir_path = "schemas",
    base = true,
    schema_id = "x.core.events.type.v1~",
    description = "Missing gts. prefix",
    properties = "id"
)]
pub struct InvalidPrefixV1 {
    pub id: gts::GtsInstanceId,
}

fn main() {}
