gts-macros/tests/compile_fail/invalid_gts_id_missing_prefix.stderr
error: struct_to_gts_schema: Invalid GTS schema ID: must start with 'gts.', got 'x.core.events.type.v1~'
 --> tests/compile_fail/invalid_gts_id_missing_prefix.rs:8:17
  |
8 |     schema_id = "x.core.events.type.v1~",
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^
